# trackflow-ai

./: .gitignore  app.py  main.py  pyproject.toml
app/: config.py  main.py
app/agents/: intent_parser.py  orchestrator.py  router.py
app/api/: dependencies.py
app/api/routes/: assistant.py  health.py  trackers.py  watchlist.py
app/core/: trackers.py
app/models/: intents.py  tracker.py
app/prompts/: system_prompt.py
app/schemas/: action.py
app/services/: schema_service.py  storage_service.py  tracker_service.py
app/services/ai/: parser.py
app/services/tmdb/: client.py
app/services/watchlist/: service.py
app/storage/: data.json  json_store.py
app/utils/: helpers.py
app/workflows/: watchlist.py
tests/: test_mvp.py
