[project]
name = "trackflow-ai"
version = "0.1.0"
description = "AI-powered conversational workflow platform for structured trackers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.0.0",
    "langgraph>=1.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest>=9.0.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
